# npc_lims

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  errored_jobs.json  index.html  jobs2.json  objects.inv  paper_1.json  pyproject.toml  sitemap.xml  sorting_jobs.json  tracked_sessions.yaml  tracked_subjects.yaml
.archive/npc_lims/metadata/: __init__.py  record_dbs.py  records.py
.archive/npc_lims/state/: redis_state.py
.github/workflows/: create_video_assets.yml  doc.yml  eye_tracking.yml  face_tracking.yml  facemap.yml  gamma_encoding.yml  lightning_pose_face_parts.yml  publish.yml  side_tracking.yml  status.yml  update_video_permission.yml  video_tracking.yml
.scratch/: session_table.csv
changelog/: index.html
contributing/: index.html
docs/: mkdocs.yml
reference/SUMMARY/: index.html
reference/npc_lims/: index.html
reference/npc_lims/exceptions/: index.html
reference/npc_lims/jobs/: index.html
reference/npc_lims/metadata/: index.html
reference/npc_lims/metadata/codeocean/: index.html
reference/npc_lims/metadata/spreadsheets/: index.html
reference/npc_lims/metadata/types/: index.html
reference/npc_lims/paths/: index.html
reference/npc_lims/paths/cache/: index.html
reference/npc_lims/paths/codeocean/: index.html
reference/npc_lims/paths/s3/: index.html
reference/npc_lims/scripts/: index.html
reference/npc_lims/scripts/generate_session_data_assets/: index.html
reference/npc_lims/scripts/regenerate_all_nwbs/: index.html
reference/npc_lims/scripts/run_session_cache_capsule/: index.html
reference/npc_lims/scripts/run_video_processing/: index.html
reference/npc_lims/scripts/update_session_status/: index.html
reference/npc_lims/status/: index.html
reference/npc_lims/status/behavior_sessions/: index.html
reference/npc_lims/status/tracked_sessions/: index.html
search/: search_index.json
src/npc_lims/: __init__.py  exceptions.py  jobs.py  tracked_sessions.yaml
src/npc_lims/jobs/: dbhub_demo.py  queue.py
src/npc_lims/metadata/: __init__.py  codeocean.py  codeocean_utils.py  dbhub.py  nwb.py  nwb.sql  record_dbs.py  records.py  spreadsheets.py  targeting.py  types.py
src/npc_lims/paths/: __init__.py  cache.py  codeocean.py  get_paths_data_assets.py  s3.py
src/npc_lims/scripts/: check_sorted_results.py  generate_session_data_assets.py  generate_session_video_data_assets.py  process_queue.py  regenerate_all_nwbs.py  run_session_cache_capsule.py  run_spike_sorting.py  run_video_processing.py  update_session_status.py  update_session_video_data_asset_permissions.py
src/npc_lims/state/: __init__.py  firebase_state.py  redis_state.py
src/npc_lims/status/: __init__.py  behavior_sessions.py  get_day_from_status.py  tracked_sessions.py
