[project]
name = "npc_lims"
version = "0.1.190"
description = "Tools to fetch and update paths, metadata and state for Mindscope Neuropixels sessions, in the cloud."
authors = [
    { name = "Arjun Sridhar", email = "arjun.sridhar@alleninstitute.org" },
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
dependencies = [
    "npc-session>=0.1.36",
    "redis>=4.1.4",
    "pydbhub-bjh>=0.0.8",
    "pyyaml>=6.0.1",
    "pyopenssl>=23.2.0",
    "openpyxl>=3.1.2",
    "packaging>=23.2",
    "types-pyYAML>=6.0.12.12",
    "types-requests>=2.31.0.6",
    "npc-io>=0.1.24",
    "codeocean>=0.3.1",
    "aind-session>=0.3.4",
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/AllenInstitute/npc_lims"
Issues = "https://github.com/AllenInstitute/npc_lims/issues"

[project.optional-dependencies]
polars = [
    "polars>1.0",
]

[project.scripts]
update_session_status = "npc_lims.scripts.update_session_status:main"
regenerate_nwb_files = "npc_lims.scripts.regenerate_nwb_files:main"
run_session_cache_capsule = "npc_lims.scripts.run_session_cache_capsule:main"
run_queue = "npc_lims.scripts.process_queue:main"

[dependency-groups]
task_runner = ["poethepoet>=0.33.1"]
linting = ["black>=25.1.0", "isort>=6.0.1", "ruff>=0.11.2"]
testing = ["pytest>=7.4.0", "mypy>=1.4.1", "pytest-cov>=4.1.0"]
bump = [
    "bump-my-version>=1.1.1",
    "git-changelog>=2.5.3",
]


[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "*.sql",
    "tracked_sessions.*",
]

[tool.uv]
package = true
default-groups = "all"

[tool.bumpversion]
tag = true
allow_dirty = true
commit = true
commit_args = "-a"
message = "Bump version: {current_version} → {new_version} [skip actions]"
pre_commit_hooks = [
    "uv lock --upgrade-package lazynwb",
    "git-changelog -o CHANGELOG.md",
    "uv build",
    "uv publish",
]
post_commit_hooks = [
    "git push origin main",
    "git push --tags",
]

[tool.poe.tasks]
mypy = "mypy src --install-types --non-interactive"
pytest = "pytest --cov-report term-missing:skip-covered --cov-report=html"
test = ["pytest"]
ruff = "ruff check src --fix-only"
black = "black src"
format = ["ruff", "black"]
bump_pub_tag = "bump-my-version bump patch"
release = ["format", "bump_pub_tag"]


[tool.ruff]
fix = true
ignore-init-module-imports = true
select = [
    "ANN",
    "B",
    "C",
    "E",
    "F",
    "I",
    "RUF100",
    "N",
    "UP",
    "W",
    "YTT",
]
extend-exclude = [
    "tests",
]
src = [
    "src",
    "tests",
]
target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.black]
target-version = [
    "py39",
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = [
    "src",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
skip_empty = true
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
    "@typing.runtime_checkable",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--ignore-glob=*scripts*,*examples*,*docs*",
    "--doctest-glob=*README.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
testpaths = [
    "src",
    "tests",
]

[tool.mypy]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
